--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -7,12 +7,24 @@
         <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>1:00 pm</td>        <!-- time    -->
+        <td>Workshop introduction</td>        <!-- content -->
       </tr>
       <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>1:10 pm</td>        <!-- time    -->
+        <td><a href="https://adamancer.github.io/python-ecology-lesson-alt/01-introducing-python.html">Introducing Python</a></td>        <!-- content -->
+      </tr>
+      <tr>               <!-- row 4   -->
+        <td>2:00 pm</td>        <!-- time    -->
+        <td><a href="https://adamancer.github.io/python-ecology-lesson-alt/02-introducing-pandas.html">Introducting Pandas</a></td>        <!-- content -->
+      </tr>
+      <tr>               <!-- row 5   -->
+        <td>3:00 pm</td>        <!-- time    -->
+        <td><a href="https://adamancer.github.io/python-ecology-lesson-alt/03-accessing-data-in-a-dataframe.html">Accessing Data in a Dataframe</a></td>        <!-- content -->
+      </tr>
+      <tr>               <!-- row 6   -->
+        <td>4:00 pm</td>        <!-- time    -->
+        <td>End of Day 1</td>        <!-- content -->
       </tr>
     </table>
   </div>
@@ -20,52 +32,28 @@
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>1:00 pm</td>        <!-- time    -->
+        <td>Review and Questions</td>        <!-- content -->
       </tr>
       <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>1:10 pm</td>        <!-- time    -->
+        <td><a href="https://adamancer.github.io/python-ecology-lesson-alt/04-aggregating-and-grouping-data.html">Aggregating and Grouping Data</a></td>        <!-- content -->
       </tr>
       <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>2:00 pm</td>        <!-- time    -->
+        <td><a href="https://adamancer.github.io/python-ecology-lesson-alt/05-combining-data-with-joins.html">Combining Dataframes</a></td>        <!-- content -->
       </tr>
-    </table>
-  </div>
-</div>
-<div class="row">        <!-- days 3 and 4 -->
-  <div class="col-md-6"> <!-- left column -->
-    <h3>Day 3</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+      <tr>               <!-- row 4   -->
+        <td>3:00 pm</td>        <!-- time    -->
+        <td><a href="https://nbviewer.org/gist/MikeTrizna/8d5bdf55c36c6ce3c32ca0d462bf9962">Visualization with `altair`</a></td>        <!-- content -->
       </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+      <tr>               <!-- row 5   -->
+        <td>3:50 pm</td>        <!-- time    -->
+        <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>        <!-- content -->
       </tr>
-      <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-    </table>
-  </div>
-  <div class="col-md-6"> <!-- right column -->
-    <h3>Day 4</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td>End</td>
-        <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
+      <tr>               <!-- row 6   -->
+        <td>4:00 pm</td>        <!-- time    -->
+        <td>End of Day 2</td>        <!-- content -->
       </tr>
     </table>
   </div>
